layout/style/res/html.css
/* ... */
area {
  
  display: none ! important;
}

iframe:fullscreen {
  
  border: none !important;
  padding: unset !important;
}


video {
  object-fit: contain;
}

video > img:-moz-native-anonymous {
  

  object-fit: inherit !important;
  object-position: inherit !important;
}

audio:not([controls]) {
  display: none;
}

audio[controls] {
  


  writing-mode: horizontal-tb !important;
}

*|*::-moz-html-canvas-content {
  display: block !important;
  
  transform: translate(0) !important;
}

video > .caption-box {
  width: 100%;
  height: 100%;
  position: relative;
}







::cue {
  color: rgba(255, 255, 255, 1);
  white-space: pre-line;
  background-color: rgba(0, 0, 0, 0.8);
  font: var(--cue-font-size) sans-serif;
  writing-mode: var(--cue-writing-mode, inherit);
  overflow-wrap: break-word;
  

}


details > summary:is(:first-of-type, :-moz-native-anonymous) {
  display: list-item;
  counter-increment: list-item 0;
  list-style: disclosure-closed inside;
}

details[open] > summary:is(:first-of-type, :-moz-native-anonymous) {
  list-style-type: disclosure-open;
}

details > summary:first-of-type > *|* {
  
  list-style-position: initial;
}



dialog {
  position: absolute;
  inset-inline-start: 0;
  inset-inline-end: 0;
  color: black;
  margin: auto;
  border-width: initial;
  border-style: solid;
  border-color: initial;
  border-image: initial;
  padding: 1em;
  background: white;
  width: -moz-fit-content;
}

dialog:not([open]) {
  display: none;
}

dialog:-moz-modal-dialog {
  -moz-top-layer: top !important;
}


dialog::backdrop {
  background: rgba(0, 0, 0, 0.1);
}

marquee {
  inline-size: -moz-available;
  display: inline-block;
  vertical-align: text-bottom;
  text-align: start;
}

marquee:is([direction="up"], [direction="down"]) {
  block-size: 200px;
}



ruby {
  display: ruby;
}
rb {
  display: ruby-base;
  white-space: nowrap;
}
rp {
  display: none;
}
rt {
  display: ruby-text;
}
rtc {
  display: ruby-text-container;
}
rtc, rt {
  white-space: nowrap;
  font-size: 50%;
  -moz-min-font-size-ratio: 50%;
  line-height: 1;
%ifndef XP_WIN
  


  font-variant-east-asian: ruby;
%endif
}
rtc, rt {
  text-emphasis: none;
}
rtc:lang(zh), rt:lang(zh) {
  ruby-align: center;
}
rtc:lang(zh-TW), rt:lang(zh-TW) {
  font-size: 30%; 
  -moz-min-font-size-ratio: 30%;
}
rtc > rt {
  font-size: unset;
}
ruby, rb, rt, rtc {
  unicode-bidi: isolate;
}



slot {
  display: contents;
}

